oasis modal - fix "x" position scroll always visible on mac

--- a/src/components/OasisTable.scss
+++ b/src/components/OasisTable.scss
@@ -72,6 +72,16 @@ table.scrolling {
     margin-top: 10px;
     height: $tbody-height;
 
+    ::-webkit-scrollbar {
+      -webkit-appearance: none;
+      width: 7px;
+    }
+    ::-webkit-scrollbar-thumb {
+      border-radius: 4px;
+      background-color: rgba(0,0,0,.5);
+      box-shadow: 0 0 1px rgba(255,255,255,.5);
+    }
+
   }
 }
 
