--- a/src/styles/modules/_modal.scss
+++ b/src/styles/modules/_modal.scss
@@ -21,8 +21,8 @@
 .closeModalBtn {
   position: absolute;
   top: 30px;
-  right: 35px;
-  padding: 0 6px;
+  right: 30px;
+  padding: 0;
 
   font-size: 21px;
   font-weight: bold;
